# automate-server

./: .gitignore  .gitpod.yml  Cargo.toml  go.mod  go.sum
benches/script-service/: Cargo.toml
benches/script-service/src/: main.rs
dev/docker/: .env  app.conf  clean-postgres.sh  docker-compose.yaml  init-db.sh
dev/env/: general-service.dev.env  general-services.dev.env  internal-service.dev.env  keypair.pem  oauth2-service.dev.env  pkcs8.key  protected-service.dev.env  publickey.crt  script-service.dev.env
dev/scripts/: init.sql  main.go  sonar-scanner.sh
general-service/: main.go
general-service/config/: config.go  smtp.go
general-service/controllers/: auth.go  email.go  organization.go  rbac.go  scripts.go  teams.go  users.go
general-service/models/: init.go
general-service/providers/: providers.go
general-service/repos/: invitations.go  jobs.go  organizations.go  rbac.go  teams.go  users.go  verify-email.go
general-services/: main.go  org.go
general-services/config/: psql.go  (+2 more)
http-go/: http.go
internal-service/: main.go
internal-services/: main.go
models/: general.go  init.go
oauth2-service/: config.go  main.go  oauth.go
protected-service/: main.go
repos/: script-access.go  script-nodes.go  scripts.go  teams.go  verify-email.go
script-service/: Cargo.toml  main.go
script-service-actix/: Cargo.toml
script-service-actix/src/: config.rs  main.rs  messages.rs  old_lobby.rs  redis.rs  room.rs  room_manager.rs  start_connection.rs  ws.rs
script-service/channel/: redis-channel.go
script-service/config/: config.go
script-service/controllers/: room.go
script-service/src/: auth.rs  broker.rs  main.rs  messages.rs  ws.rs
server-go/: http.go
utils-go/: fiber.go  general.go  logger.go  psql.go  redis.go
utils-rs/: Cargo.toml  lib.rs
(+86 files in other folders)
