[package]
name = "script-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.79"
jsonwebtoken = "8.0.1"
redis = "0.21.5"
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1"] }
num_cpus = "1.13.1"
futures = "0.3.21"
net2 = "0.2.37"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = "0.16.1"
base64 = "0.13.0"
once_cell = "1.9.0"
thiserror = "1.0.30"
flume = "0.10.11"
reqwest = { version = "0.11.9", features = ["default", "json"] }
utils-rs = { path = "../utils-rs" }

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
