[package]
name = "bench-script-service"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
num_cpus = "1.13.1"
tokio = { version = "1.16.1", features = ["full"] }
tokio-tungstenite = "0.16.1"
futures = "0.3.21"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3